# RAG_service

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20240109_000001_init_schema.py  20260113_070152_change_metadata_field_name_to_avoid_.py  20260113_075450_update_chunk_embedding_dimension_to_1536.py  20260114_132846_add_index_for_bm25_search.py  20260205_022110_create_document_hash_on_chunks_table.py
evaluation/: bm25_search_labelled.csv  hybrid_search_mantine_merged_labelled.csv  mantine_truth_labels.csv  queries.jsonl  queries_b.jsonl  queries_merged.jsonl  queries_to_parse.jsonl  reranked_mantine_label.csv  retrieval_mantine_custom_chunk_label2.csv  retrieval_mantine_custom_merged_label.csv  retrieval_mantine_custom_parser_label.csv  retrieval_mantine_fixed_chunk_label.csv  retrieval_mantine_fixed_chunk_label2.csv  retrieval_mantine_fixed_chunk_merged_label.csv  retrieval_mantine_unparsed_label.csv
infra/postgres/: init.sql
notebooks/: README.md  rag_mantine.ipynb
src/rag_service/: db.py  main.py  models.py  settings.py
src/rag_service/eval/: eval_utils.py  labelling_utils.py  ndcg.py  precision.py
src/rag_service/models/: __init__.py  embeddings.py  evaluations.py
src/rag_service/pipeline/: document_loader.py  ingestion.py  mantine_markdown_parser.py  retrieval.py
src/rag_service/providers/: gemini.py
